--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
+    "secure-ls": "^1.2.6",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
