--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "form-data": "^4.0.0",
     "pinia": "^2.0.14",
+    "qs": "^6.11.0",
     "secure-ls": "^1.2.6",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15",
