--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "form-data": "^4.0.0",
+    "moment": "^2.29.3",
     "pinia": "^2.0.14",
     "qs": "^6.11.0",
     "secure-ls": "^1.2.6",
